--- a/app/components/grid/grid.module.css
+++ b/app/components/grid/grid.module.css
@@ -1,5 +1,5 @@
 .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    grid-gap: .5rem;
+    grid-template-columns: repeat(auto-fill, 150px);
+    grid-gap: 1rem;
   }
