--- a/app/components/imageWithOverlay/imageWithOverlay.module.css
+++ b/app/components/imageWithOverlay/imageWithOverlay.module.css
@@ -1,6 +1,7 @@
 .overlay {
     position: relative;
-    cursor:pointer;
+    cursor:pointer !important;
+    border: none !important;
 }
 
 .overlay:hover {
