--- a/app/components/imageWithOverlay/imageWithOverlay.module.css
+++ b/app/components/imageWithOverlay/imageWithOverlay.module.css
@@ -5,7 +5,7 @@
 }
 
 .overlay:hover {
-    transform: scale(1.03); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    transform: scale(1.03);
   }
 
 .overlay > small {
